--- a/client-src/src/index.css
+++ b/client-src/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,16 +10,25 @@ body {
   color: #222;
 }
 
+#root {
+  min-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 h1 {
   margin: 0;
 }
 
 nav {
   padding: 1rem 0.5rem;
-  background: rgb(224, 134, 224);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 100px;
+  position: relative;
+  box-shadow: 0px -2px 7px 5px rgb(50 50 50 / 75%)
 }
 
 nav a {
@@ -25,8 +38,37 @@ nav a {
 
 nav h1 {
   font-size: 2rem;
+  padding: 0.25rem;
+  color: white;
+  background: rgba(0, 0, 0, 0.7);
+  font-weight: 400;
 }
 
 nav img {
   width: 5rem;
+  cursor: pointer;
+}
+
+#glitch-canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100px;
+  z-index: -1;
+  opacity: 0.3;
+}
+
+main {
+  background:rgb(255, 138, 144);
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main img {
+  width: 150px;
+  margin-top: -25%;
 }
