--- a/client-src/src/index.css
+++ b/client-src/src/index.css
@@ -28,7 +28,8 @@ nav {
   align-items: center;
   height: 100px;
   position: relative;
-  box-shadow: 0px -2px 7px 5px rgb(50 50 50 / 75%)
+  background: rgba(0, 0, 0, 0.7);
+  box-shadow: 0px -2px 7px 5px rgb(50 50 50 / 75%);
 }
 
 nav a {
@@ -57,7 +58,7 @@ nav img {
   width: 100%;
   height: 100px;
   z-index: -1;
-  opacity: 0.3;
+  opacity: 0.5;
 }
 
 main {
